# finllm-sentiment

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: lora_mistral.yaml
notebooks/: 01_dataset_exploration.ipynb  01_eda_financial_phrasebank.ipynb  02_prompt_experiments.ipynb
scripts/: train.py
src/: __init__.py
src/data/: __init__.py  dataset.py  preprocessing.py
src/evaluation/: __init__.py  benchmark.py  metrics.py
src/inference/: __init__.py  predictor.py
src/training/: __init__.py  lora_config.py  trainer.py
streamlit_app/: app.py
tests/: conftest.py  test_training.py
